# RobotDetection

./: README.md  bumper_dataset.yaml  cut.py  dataset.py  display.py  help.py  intrinsic.py  loss.py  main.py  pyproject.toml  reid.py  reid.yaml  reid_train.py  robot.yaml  run.py  sampler.py  sort.py  sweep.yaml  test.py  track.py  train.py  video_downloader.py
.github/workflows/: workflow.yml
RobotDetectionLabels/: README.dataset.txt  README.roboflow.txt  data.yaml
RobotDetectionLabels/test/labels/: 20230401_085358-mp4_00421_png.rf.2c9d328b3e4faf08cf3072787a1e460c.txt  Chinese_Team_cyber-mp4_01494_png.rf.058ecdaa327ad6967fd7ae34499db4e8.txt  FRC-Team-4909-Finals-Match-4-Pov-Footage-mp4_01195_png.rf.8ac2a1a483e16fec707e36aaf1c70b74.txt  Finals-Match-1-mp4_03902_png.rf.219605e68facb07502464be0099491ab.txt  Palmetto_Regional_2020_Practice12-mp4_01497_png.rf.cc94ccb7e2909b3932531a416ede1927.txt  (+86 more)
RobotDetectionLabels/train/: labels.cache
RobotDetectionLabels/valid/: labels.cache
archive/: dataset.yaml
bumper/: cut.py  ocr.py  similarity.py  sort.py  track.py
bumper_reading/: app.py  data.yaml
cli/: bumper.py  default.json  detector.py  parser.py  reid.py  types.py
redis/: redis.py
reid/: dataset.py  loss.py  reid_train.py  sort.py  utils.py  validate.py
robot/: cut.py  track.py  video_downloader.py
test/: main.py  robot_detection.py  robot_fingerprinting.py
test/robot_detection_lib/: bumper.py  model_base.py  ocr.py  reid.py  robot.py  utils.py
utils/: help.py  hyperparameters.py  ocr.py  similarity.py
(+3089 files in other folders)
