[project]
name = "robotdetection"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.12",
    "opencv-python-headless>=4.13.0.90",
    "pydantic>=2.12.5",
    "pytube>=15.0.0",
    "pytubefix>=10.3.6",
    "rfdetr>=1.4.1",
    "termcolor>=3.3.0",
    "torchreid>=0.2.5",
    "ultralytics>=8.4.4",
    "valkey>=6.1.1",
    "wandb>=0.24.2",
]

[project.scripts]
ml = "main:main"

[tool.setuptools]
packages = ["reid", "cli", "redis"]
py-modules = ["main"]
